Accounts app created, registration view added

--- a/myproject/website/templates/website/menu.html
+++ b/myproject/website/templates/website/menu.html
@@ -1,5 +1,5 @@
 <div id="menu">
-  <h2>Menu</h2>
+  <h2>Admin Panel</h2>
   <form id="itemForm">
     <div class="form-group">
       <label for="itemId">Item ID</label>
