--- a/myproject/website/templates/website/dashboard.html
+++ b/myproject/website/templates/website/dashboard.html
@@ -13,7 +13,7 @@
       <label for="itemValue">Item Value</label>
       <input type="number" class="form-control" id="itemValue" name="itemValue" required>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Update</button>
     <button type="button" class="btn btn-danger" id="deleteButton">Delete</button>
   </form>
 </div>
