--- a/myproject/accounts/templates/accounts/login.html
+++ b/myproject/accounts/templates/accounts/login.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html>
-  
 <head>
-  <title>Login</title>
+  <title>Register</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{% static 'accounts/css/login.css' %}"></head>
+  <link rel="stylesheet" href="{% static 'accounts/css/register.css' %}">
 </head>
-
 <body>
-  <div class="container">
+  <div class="container d-flex justify-content-center align-items-center">
     <div class="row">
       <div class="col-md-12">
-        <div class="login-panel">
-          <h3>Login</h3>
-          {% if error %}
-            <div class="alert alert-danger">{{ error }}</div>
-          {% endif %}
-          <form method="post" action="{% url 'login' %}">
-            {% csrf_token %}
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-          </form>
+        <div class="register-panel">
+
+          {%for message in messages%}
+          <p id="messages" class="d-block text-white mx-auto">{{message}}</p>
+          {%endfor%}
+          
+          <form method="POST" action="">
+              {% csrf_token %}
+
+              <div class="form-group">
+                <label for="id_username">Username</label>
+                <input type="text" class="form-control" id="id_username" name="username" required>
+                <small class="form-text text-muted">Enter your username.</small>
+              </div>
+
+              <div class="form-group">
+                <label for="id_password1">Password</label>
+                <input type="password" class="form-control" id="id_password1" name="password" required>
+                <small class="form-text text-muted">Enter your password.</small>
+              </div>
+              
+
+
+              <button type="submit" class="btn btn-outline-light btn-block">Login</button>
+              <a class="btn btn-outline-warning btn-block" href="{% url 'register' %}">Register</a>
+            </form>
         </div>
       </div>
     </div>
   </div>
 </body>
-
 </html>
