--- a/myproject/accounts/templates/accounts/register.html
+++ b/myproject/accounts/templates/accounts/register.html
@@ -6,31 +6,41 @@
   <link rel="stylesheet" href="{% static 'accounts/css/register.css' %}">
 </head>
 <body>
-  <div class="container">
+  <div class="container d-flex justify-content-center align-items-center">
     <div class="row">
       <div class="col-md-12">
         <div class="register-panel">
 
+            {%for message in messages%}
+            <p id="messages" class="d-block text-white border-danger mx-auto">{{message}}</p>
+            {%endfor%}
+
             <form method="post" action="">
                 {% csrf_token %}
                 <div class="form-group">
-                  <label for="id_username">Username</label>
-                  <input type="text" class="form-control" id="id_username" name="username" required>
-                  <small class="form-text text-muted">Enter your username.</small>
+                    {{form.username.label}} <br/>
+                    {{form.username}}
+                    <small class="form-text text-muted">Enter your username.</small>
                 </div>
                 <div class="form-group">
-                  <label for="id_password1">Password</label>
-                  <input type="password" class="form-control" id="id_password1" name="password1" required>
-                  <small class="form-text text-muted">Enter your password.</small>
+                    {{form.email.label}} <br/>
+                    {{form.email}}
+                <small class="form-text text-muted">Enter your E-mail.</small>
                 </div>
                 <div class="form-group">
-                  <label for="id_password2">Confirm Password</label>
-                  <input type="password" class="form-control" id="id_password2" name="password2" required>
-                  <small class="form-text text-muted">Confirm your password.</small>
+                    {{form.password1.label}} <br/>
+                    {{form.password1}}
+                    <small class="form-text text-muted">Enter your password.</small>
                 </div>
-                <button type="submit" class="btn btn-primary">Register</button>
-              </form>
+                <div class="form-group">
+                    {{form.password2.label}} <br/>
+                    {{form.password2}}
+                    <small class="form-text text-muted">Confirm your password.</small>
+                </div>
 
+                <button type="submit" class="btn btn-outline-warning btn-block">Register</button>
+                <span>Already have an Account? <a class="btn btn-link btn-block" href="{% url 'login' %}">Log-In</a></span>
+              </form>
         </div>
       </div>
     </div>
